[package]
name = "xcomponent"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/jschwe/xcomponent.git"
description = "Experimental bindings of the OpenHarmonyOS ArkUI XComponent"
keywords = ["OpenHarmony", "HarmonyOS"]
license = "Apache-2.0"

[dependencies]
log = { version = "0.4.21", optional = true }
ohos-sys = "0.1.0"

[features]
log = ["dep:log"]
