[package]
name = "xcomponent"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/jschwe/xcomponent.git"
description = "Experimental bindings of the OpenHarmonyOS ArkUI XComponent"
keywords = ["OpenHarmony", "HarmonyOS"]
license = "Apache-2.0"

[dependencies]
log = { version = "0.4.21", optional = true }
ohos-sys = "0.1.0"
napi-ohos = {version = "0.1", optional = true}

[features]
log = ["dep:log"]
register = ["dep:napi-ohos"]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-ohos"
